--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,11 @@
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
