--- a/front/package.json
+++ b/front/package.json
@@ -7,19 +7,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.15.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.1.1",
-    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
+    "throttle-debounce-ts": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
