--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
     "moment": "^2.29.4",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "throttle-debounce-ts": "^1.1.1",
