--- a/back/docker/dockerfile
+++ b/back/docker/dockerfile
@@ -3,10 +3,54 @@ FROM openjdk:11-jre-slim
 
 ARG JAR_FILE=InterviewStudy-0.0.1-SNAPSHOT.jar
 
+ARG spring_datasource_drvier-class-name
+
+ARG spring_datasource_password
+
+ARG spring_datasource_url
+
+ARG spring_datasource_username
+
+ARG spring_jpa_hibernate_ddl-auto
+
+ARG spring_jpa_properties_hibernate_dialect
+
+ARG spring_jpa_properties_hibernate_format_sql
+
+ARG spring_jpa_show-sql
+
+ARG spring_redis_host
+
+ARG spring_redis_lettuce_pool_max-active
+
+ARG spring_redis_lettuce_pool_max-idle
+
+ARG spring_redis_lettuce_pool_min-idle
+
+ARG spring_redis_port
+
+ARG OPENVIDU_URL
+
+ARG OPENVIDU_SECRET
+
 COPY ${JAR_FILE} app.jar
 
 EXPOSE 8090
 
 RUN mkdir -p viewing
 
-CMD java -jar app.jar >>/viewing/application.log 2>/dev/null
+CMD java -Dspring.datasource.driver-class-name=${spring_datasource_drvier-class-name} \
+ -Dspring.datasource.password=${spring_datasource_password} \
+ -Dspring.datasource.url=${spring_datasource_url} \
+ -Dspring.datasource.username=${spring_datasource_username} \
+ -Dspring.jpa.hibernate.ddl-auto=${spring_jpa_hibernate_ddl-auto} \
+ -Dspring.jpa.properties.hibernate.dialect=${spring_jpa_properties_hibernate_dialect} \
+ -Dspring.jpa.show-sql=${spring_jpa_show-sql} \
+ -Dspring.redis.host=${spring_redist_host} \
+ -Dspring.redis.lettuce.pool.max-active=${spring_redis_lettuce_pool_max-active} \
+ -Dspring.redis.lettuce.pool.max-idle=${spring_redis_lettuce_pool_max-idle} \
+ -Dspring.redis.lettuce.pool.min-idle=${spring_redis_lettuce_pool_min-idle} \
+ -Dspring.redis.port=${spring_redis_port} \
+ -DOPENVIDU_URL=${OPENVIDU_URL} \
+ -DOPENVIDU_SECRET=${OPENVIDU_SECRET} \
+ -jar app.jar >>/viewing/application.log 2>/dev/null
