--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 HELP.md
 target/
-!back/.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+.properties
 
 ### STS ###
 .apt_generated
@@ -31,3 +33,4 @@ build/
 
 ### VS Code ###
 .vscode/
+
