--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "event-source-polyfill": "^1.0.31",
     "framer-motion": "^10.15.0",
     "moment": "^2.29.4",
     "net": "^1.0.2",
