--- a/front/package.json
+++ b/front/package.json
@@ -25,7 +25,8 @@
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "throttle-debounce-ts": "^1.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "openvidu-browser": "^2.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
