--- a/back/docker/dockerfile
+++ b/back/docker/dockerfile
@@ -65,6 +65,37 @@ ARG OPENVIDU_SECRET
 
 ENV OPENVIDUSECRET=${OPENVIDU_SECRET}
 
+ARG cloud_aws_s3_bucket
+
+ENV cloud_aws_s3_bucket=${cloud_aws_s3_bucket}
+
+ARG cloud_aws_region_static
+
+ENV cloud_aws_region_static=${cloud_aws_region_static}
+
+ARG cloud_aws_stack_auto
+
+ENV cloud_aws_stack_auto=${cloud_aws_stack_auto}
+
+ARG cloud_aws_credentials_access_key
+
+ENV cloud_aws_credentials_access_key=${cloud_aws_credentials_access_key}
+
+ARG cloud_aws_credentials_secret_key
+
+ENV cloud_aws_credentials_secret_key=${cloud_aws_credentials_secret_key}
+
+ARG spring_servlet_multipart_max_file_size
+
+ENV spring_servlet_multipart_max_file_size=${spring_servlet_multipart_max_file_size}
+
+ARG spring_servlet_multipart_max_request_size
+
+ENV spring_servlet_multipart_max_request_size=${spring_servlet_multipart_max_request_size}
+
+ARG spring_servlet_multipart_enabled
+
+ENV spring_servlet_multipart_enabled=${spring_servlet_multipart_enabled}
 
 
 COPY ${JAR_FILE} app.jar
@@ -87,4 +118,12 @@ CMD java -Dspring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_
  -Dspring.redis.port=${SPRING_REDIS_PORT} \
  -DOPENVIDU_URL=${OPENVIDUURL} \
  -DOPENVIDU_SECRET=${OPENVIDUSECRET} \
+ -Dcloud.aws.s3.bucket=${cloud_aws_s3_bucket} \
+ -Dcloud.aws.region.static=${cloud_aws_region_static} \
+ -Dcloud.aws.stack.auto=${cloud_aws_stack_auto} \
+ -Dcloud.aws.credentials.access-key=${cloud_aws_credentials_access_key} \
+ -Dcloud.aws.credentials.secret-key=${cloud_aws_credentials_secret_key} \
+ -Dspring.servlet.multipart.max-file-size=${spring_servlet_multipart_max_file_size} \
+ -Dspring.servlet.multipart.max-request-size=${spring_servlet_multipart_max_request_size} \
+ -Dspring.servlet.multipart.enabled=${spring_servlet_multipart_enabled} \
  -jar app.jar >>/viewing/application.log 2>/dev/null
