--- a/back/docker/dockerfile
+++ b/back/docker/dockerfile
@@ -65,7 +65,6 @@ ARG OPENVIDU_SECRET
 
 ENV OPENVIDUSECRET=${OPENVIDU_SECRET}
 
-<<<<<<< Updated upstream
 ARG cloud_aws_s3_bucket
 
 ENV cloud_aws_s3_bucket=${cloud_aws_s3_bucket}
@@ -97,12 +96,8 @@ ENV spring_servlet_multipart_max_request_size=${spring_servlet_multipart_max_req
 ARG spring_servlet_multipart_enabled
 
 ENV spring_servlet_multipart_enabled=${spring_servlet_multipart_enabled}
-=======
-<<<<<<< HEAD
-ARG SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE
-=======
+
 ARG cloud_aws_s3_bucket
->>>>>>> Stashed changes
 
 ENV cloud_aws_s3_bucket=${cloud_aws_s3_bucket}
 
@@ -133,7 +128,8 @@ ENV spring_servlet_multipart_max_request_size=${spring_servlet_multipart_max_req
 ARG spring_servlet_multipart_enabled
 
 ENV spring_servlet_multipart_enabled=${spring_servlet_multipart_enabled}
->>>>>>> 612281293e41fbab5a44fcc85ae85587c3611d4f
+
+ARG spring_datasource_hikari_maximum_pool_size
 
 ENV SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE=${spring_datasource_hikari_maximum_pool_size}
 
@@ -157,12 +153,7 @@ CMD java -Dspring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_
  -Dspring.redis.port=${SPRING_REDIS_PORT} \
  -DOPENVIDU_URL=${OPENVIDUURL} \
  -DOPENVIDU_SECRET=${OPENVIDUSECRET} \
-<<<<<<< Updated upstream
-=======
-<<<<<<< HEAD
  -Dspring.datasource.hikari.maximum.pool.size=${SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE} \
-=======
->>>>>>> Stashed changes
  -Dcloud.aws.s3.bucket=${cloud_aws_s3_bucket} \
  -Dcloud.aws.region.static=${cloud_aws_region_static} \
  -Dcloud.aws.stack.auto=${cloud_aws_stack_auto} \
@@ -171,8 +162,5 @@ CMD java -Dspring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_
  -Dspring.servlet.multipart.max-file-size=${spring_servlet_multipart_max_file_size} \
  -Dspring.servlet.multipart.max-request-size=${spring_servlet_multipart_max_request_size} \
  -Dspring.servlet.multipart.enabled=${spring_servlet_multipart_enabled} \
-<<<<<<< Updated upstream
-=======
->>>>>>> 612281293e41fbab5a44fcc85ae85587c3611d4f
->>>>>>> Stashed changes
+ -Dspring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE}
  -jar app.jar >>/viewing/application.log 2>/dev/null
