--- a/back/docker/dockerfile
+++ b/back/docker/dockerfile
@@ -162,5 +162,5 @@ CMD java -Dspring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_
  -Dspring.servlet.multipart.max-file-size=${spring_servlet_multipart_max_file_size} \
  -Dspring.servlet.multipart.max-request-size=${spring_servlet_multipart_max_request_size} \
  -Dspring.servlet.multipart.enabled=${spring_servlet_multipart_enabled} \
- -Dspring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE}
+ -Dspring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE} \
  -jar app.jar >>/viewing/application.log 2>/dev/null
