--- a/front/docker/dockerfile
+++ b/front/docker/dockerfile
@@ -1,3 +1,16 @@
+#가져올 환경 변수
+ARG REACT_APP_CLIENT_URL
+
+ENV REACT_APP_CLIENT_URL=${REACT_APP_CLIENT_URL}
+
+ARG REACT_APP_SERVER_URL
+
+ENV REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}
+
+RUN echo "REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}" >> .env
+
+RUN echo "REACT_APP_CLIENT_URL=${REACT_APP_CLIENT_URL}" >> .env
+
 # 가져올 이미지를 정의
 FROM node:14
 # package.json 워킹 디렉토리에 복사 (.은 설정한 워킹 디렉토리를 뜻함)
