--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.15.0",
     "moment": "^2.29.4",
     "net": "^1.0.2",
+    "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
     "react-calendar": "^4.4.0",
     "react-dom": "^18.2.0",
@@ -29,8 +30,7 @@
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "throttle-debounce-ts": "^1.1.1",
-    "web-vitals": "^2.1.4",
-    "openvidu-browser": "^2.28.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
